--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ repository = "https://github.com/justdeeevin/redev"
 [dependencies]
 enum-map = "2.4.0"
 lazy_static = "1.4"
-serde = {version = "1.0", features = ["derive"], optional = true}
+serde = { version = "1.0", features = ["derive"], optional = true }
 strum = "0.24.1"
 strum_macros = "0.24"
 widestring = "1.0.2"
@@ -27,20 +27,24 @@ serde = ["dep:serde"]
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.24.0"
-core-foundation = {version = "0.9.3"}
-core-foundation-sys = {version = "0.8.3"}
-core-graphics = {version = "0.22.3", features = ["highsierra"]}
+core-foundation = { version = "0.9.3" }
+core-foundation-sys = { version = "0.8.3" }
+core-graphics = { version = "0.22.3", features = ["highsierra"] }
 dispatch = "0.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-epoll = {version = "4.1.0"}
-inotify = {version = "0.10.0", default-features = false}
+epoll = { version = "4.1.0" }
+inotify = { version = "0.10.0", default-features = false }
 libc = "0.2"
-x11 = {version = "2.18", features = ["xlib", "xrecord", "xinput"]}
-mio = {version = "0.8.4", features = ["os-poll", "os-ext"]}
+x11 = { version = "2.18", features = ["xlib", "xrecord", "xinput"] }
+mio = { version = "0.8.4", features = ["os-poll", "os-ext"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-winapi = {version = "0.3", features = ["winuser", "errhandlingapi", "processthreadsapi"]}
+winapi = { version = "0.3", features = [
+  "winuser",
+  "errhandlingapi",
+  "processthreadsapi",
+] }
 
 [dev-dependencies]
 serde_json = "1.0"
@@ -49,7 +53,7 @@ serde_json = "1.0"
 # to run thoses tests in sequence instead.
 lazy_static = "1.4"
 serial_test = "0.8.0"
-tokio = {version = "1.5", features = ["sync", "macros", "rt-multi-thread"]}
+tokio = { version = "1.5", features = ["sync", "macros", "rt-multi-thread"] }
 
 [[example]]
 name = "serialize"
