--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ repository = "https://github.com/justdeeevin/redev"
 enum-map = "2.4.0"
 lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"], optional = true }
-strum = "0.24.1"
-strum_macros = "0.24"
+strum = { version = "0.24.1", features = ["derive"] }
 widestring = "1.0.2"
 log = "0.4"
 
