--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ enum-map = "2.4.0"
 lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"], optional = true }
 strum = { version = "0.24.1", features = ["derive"] }
+thiserror = "2.0.12"
 widestring = "1.0.2"
 log = "0.4"
 
