--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ name = "redev"
 version = "0.1.0"
 
 categories = ["development-tools::testing", "api-bindings", "hardware-support"]
-description = "Listen and send keyboard and mouse events on Windows, Linux and MacOS."
+description = "Cross-platform simulation and global listening for keyboard and mouse input."
 documentation = "https://docs.rs/redev/"
 homepage = "https://github.com/justdeeevin/redev"
 keywords = ["input", "mouse", "testing", "keyboard", "automation"]
