--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = [
 edition = "2018"
 name = "redev"
 version = "0.1.0"
+exclude = ["flake.*"]
 
 categories = ["development-tools::testing", "api-bindings", "hardware-support"]
 description = "Cross-platform simulation and global listening for keyboard and mouse input."
